cfn/pwm_security_group.element.template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "ConnectCMDB": {
      "Fn::Equals": [
        {
          "Ref": "ConnectCMDB"
        },
        "true"
      ]
    },
    "NoELB": {
      "Fn::Equals": [
        {
          "Ref": "UseELB"
        },
        "false"
      ]
    },
    "NoConnectCMDB": {
      "Fn::Equals": [
        {
          "Ref": "ConnectCMDB"
        },
        "false"
      ]
    },
    "UseELB": {
      "Fn::Equals": [
        {
          "Ref": "UseELB"
        },
        "true"
      ]
    }
  },
  "Description": "This templates creates one security group for PWM instances, and one for their load balancer",
  "Outputs": {
    "PWMElbSecurityGroupId": {
      "Condition": "UseELB",
      "Description": "Security Group ID for the PWM Elastic Load Balancer",
      "Value": {
        "Ref": "PWMElbSecurityGroup"
      }
    },
    "PWMSecurityGroupId": {
      "Description": "Security Group ID for the PWM instances",
      "Value": {
        "Ref": "PWMSecurityGroup"
      }
    }
  },
  "Parameters": {
    "UseELB": {
      "AllowedValues": [
        "false",
        "true"
      ],
      "Default": "true",
      "Description": "Set to true if using an ELB in front of PWM; otherwise set to false",
      "Type": "String"
    },
    "ConnectCMDB": {
      "AllowedValues": [
        "true",
        "false"
      ],
      "Default": "false",
      "Description": "Set to true if wishing to allow port 22 connections from component security group; otherwise set to false",
      "Type": "String"
    },
    "CMDBSecurityGroup": {
      "AllowedPattern": "^$|^sg-(?=(?:.{8}|.{17})$)[a-z0-9]*$",
      "Default": "",
      "Description": "Security Group id of CMDB system from the peered account (Example: sg-12345678).",
      "Type": "String"
    },
    "VPC": {
      "Description": "VPC ID",
      "Type": "AWS::EC2::VPC::Id"
    }
  },
  "Resources": {
    "CMDBToPWMIngressTcp22": {
      "Condition": "ConnectCMDB",
      "Properties": {
        "FromPort": "22",
        "GroupId": {
          "Ref": "PWMSecurityGroup"
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Ref": "CMDBSecurityGroup"
        },
        "ToPort": "22"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "ElbToPWMEgressTcp80": {
      "Condition": "UseELB",
      "Properties": {
        "DestinationSecurityGroupId": {
          "Ref": "PWMSecurityGroup"
        },
        "FromPort": "80",
        "GroupId": {
          "Ref": "PWMElbSecurityGroup"
        },
        "IpProtocol": "tcp",
        "ToPort": "80"
      },
      "Type": "AWS::EC2::SecurityGroupEgress"
    },
    "ElbToPWMIngressTcp80": {
      "Condition": "UseELB",
      "Properties": {
        "FromPort": "80",
        "GroupId": {
          "Ref": "PWMSecurityGroup"
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Ref": "PWMElbSecurityGroup"
        },
        "ToPort": "80"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PublicToElbIngressTcp443": {
      "Condition": "UseELB",
      "Properties": {
        "CidrIp": "0.0.0.0/0",
        "FromPort": "443",
        "GroupId": {
          "Ref": "PWMElbSecurityGroup"
        },
        "IpProtocol": "tcp",
        "ToPort": "443"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "PWMElbSecurityGroup": {
      "Condition": "UseELB",
      "Properties": {
        "GroupDescription": "Enable PWM ELB access from the Internet",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "pwm-elb-",
                  {
                    "Ref": "AWS::StackName"
                  }
                ]
              ]
            }
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "PWMSecurityGroup": {
      "Properties": {
        "GroupDescription": "Enable PWM access from ELB",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "pwm-",
                  {
                    "Ref": "AWS::StackName"
                  }
                ]
              ]
            }
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    }
  }
}
